# pkg/api/warehouse/list.go
@@ -10,7 +10,7 @@ import (
 // @Accept		json
 // @Produce		json
 // @Tags		Warehouse
-// @Success	200	{array} model.Storage "List of warehouse"
+// @Success	200	{array} model.Warehouse "List of warehouse"
 // @Failure	500	{warehouse} 	errors.APIError
 // @Router		/warehouse/ [get]
 func (r WarehouseRoute) ListWarehouse(c *gin.Context) {
